test/integration/bad/unicode/unicode_normalization.stan
data {
  real ñabc;
  // this is a different encoding than above, should be prevented still!
  real ñabc;
}
